--- a/style.css
+++ b/style.css
@@ -22,9 +22,8 @@ body {
   font-style: normal;
   font-weight: 500;
   line-height: 20px;
-  letter-spacing: 0em;
+  letter-spacing: 0;
   text-align: center;
-
 }
 
 /* general-button */
