--- a/style.css
+++ b/style.css
@@ -488,17 +488,21 @@ footer .icons li {
     animation-timing-function: ease-in;
   }
 
-  @keyframes link-icons{
-    0%{
+  @keyframes link-icons {
+    0% {
       transform: scale(2) rotate(360deg);
     }
 
-    50%{
-     transform: scale(0.7);
+    50% {
+      transform: scale(0.7);
     }
 
-    95%, 100% {
-     transform: scale(1) rotate(360deg);
+    95% {
+      transform: scale(1) rotate(360deg);
+    }
+
+    100% {
+      transform: scale(1) rotate(360deg);
     }
   }
 
@@ -537,25 +541,28 @@ footer .icons li {
 
   .header .me:hover {
     animation-name: headerslide;
-    animation-duration: 1.5s; 
+    animation-duration: 1.5s;
   }
 
   @keyframes headerslide {
     0% {
-      transform: translateX(0) 
+      transform: translateX(0);
     }
 
     100% {
-      transform: translateX(30px) 
+      transform: translateX(30px);
     }
   }
 
   .blank {
-    width: 464px;
-    height: 290px;
-    max-width: 684px;
-    max-height: 448px;
+    padding: 0%;
+    width: 484px;
+    height: 248px;
     background: linear-gradient(0deg, #fff, #fff);
+  }
+
+  .blank:hover {
+    transform: scale(0.9);
   }
 
   .multi-post {
@@ -584,13 +591,6 @@ footer .icons li {
   .multi-story-2,
   .multi-story-4 {
     flex-direction: row-reverse;
-  }
-
-  .multi-story-1 img:hover,
-  .multi-story-2 img:hover,
-  .multi-story-3 img:hover,
-  .multi-story-4 img:hover {
-    transform: scale(0.9);
   }
 
   .destop-split {
@@ -732,10 +732,6 @@ footer .icons li {
 
   .icons li {
     padding-right: 15px;
-  }
-
-  li img {
-    padding: 0%;
   }
 
   .email-link p {
