--- a/style.css
+++ b/style.css
@@ -31,16 +31,16 @@ body {
 /* general-button */
 
 button {
-  color: #fff;
+  color: #f5f5ff;
   font-size: 12px;
   padding: 12px;
   border: none;
   height: 48px;
   width: 89px;
-  background-color: rgba(125, 115, 252, 1);
+  background-color: rgba(125, 115, 254, 2);
 }
 
-form button {
+form .button {
   padding: 1em;
 }
 
@@ -53,7 +53,7 @@ button:enabled {
 }
 
 button:hover {
-  background-color: rgba(125, 115, 252, 1);
+  background-color: rgba(75, 69, 158, 3);
   cursor: pointer;
   box-shadow: 0 8px 16px 0 rgba(125, 115, 252, 0.48);
 }
@@ -62,7 +62,7 @@ button:active {
   background-color: rgba(94, 66, 215, 1);
 }
 
-button:disabled {
+.button:disabled {
   background-color: rgba(42, 43, 51, 1);
 }
 
