--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ button {
   padding: 12px;
   border: none;
   height: 48px;
-  width: 89px;
+  width: 110px;
 }
 
 .button {
@@ -211,6 +211,7 @@ h1 {
   font-size: 15px;
   font-weight: 500;
   text-align: center;
+  padding-top: 10px;
 }
 
 section p {
@@ -422,7 +423,8 @@ footer .icons li {
 
   .open-menu,
   .name,
-  .fa-chevron-right {
+  .fa-chevron-right,
+  .fullname {
     display: none;
   }
 
@@ -791,13 +793,13 @@ footer .icons li {
     padding: 0 8px;
   }
 
-.fullname {
-  padding-bottom: 1em;
-}
+  .fullname {
+    padding-bottom: 1em;
+  }
 
-form {
-  padding-top: 3em;
-}
+  form {
+    padding-top: 3em;
+  }
 
   input[type="email"] {
     width: 565px;
