--- a/style.css
+++ b/style.css
@@ -132,28 +132,28 @@ nav .open-menu {
     transition: top 1s ease;
     flex-direction: column;
     color: white;
-  box-sizing: content-box;
+    box-sizing: content-box;
   }
   .popup-container {
     border: 1px solid white;
   }
-  
+
   .popup-close {
-text-align: center;
-position: absolute;
-top: 2%;
-right: 5%;
+    text-align: center;
+    position: absolute;
+    top: 2%;
+    right: 5%;
   }
 
   .popup-content {
-   display: flex;
+    display: flex;
   }
-  
+
   .popup-img {
     text-align: center;
   }
-  
-  .popup-img img{
+
+  .popup-img img {
     max-width: 300px;
     max-height: 190px;
   }
@@ -161,7 +161,7 @@ right: 5%;
     text-align: center;
     justify-content: center;
   }
-  
+
   .popup-info p {
     font-family: Roboto;
     font-style: normal;
@@ -171,22 +171,23 @@ right: 5%;
     padding: 0 3em;
     margin: 0;
   }
-  
+
   .tech {
     display: flex;
     justify-content: center;
     border-left: 1px solid white;
     padding: 0.5em 0;
   }
-  
+
   .popup-button {
     display: grid;
-  grid-template-rows: 1fr 1fr;
-  grid-gap: 1em;
-justify-content: center;
+    grid-template-rows: 1fr 1fr;
+    grid-gap: 1em;
+    justify-content: center;
   }
-  
-  .btn, .Btn {
+
+  .btn,
+  .Btn {
     color: white;
     text-decoration: none;
     font-size: 12px;
@@ -197,11 +198,10 @@ justify-content: center;
     box-shadow: 0 4px 13px 0 rgba(255, 255, 255, 3);
     cursor: pointer;
   }
-  
-  .btn {
-  justify-self: end;
-  }
 
+  .btn {
+    justify-self: end;
+  }
 
   .envelope {
     display: none;
@@ -507,91 +507,92 @@ footer .icons li {
 }
 
 @media screen and (min-width: 769px) {
-/* popup-menu */
-.popup-container {
-  height: 85vh;
-  width: 60%;
-  top: 10%;
-  left: 17%;
-  right: 0%;
-  bottom: 10%;
-  position: fixed;
-  z-index: 10;
-  text-align: left;
-  margin-left: 0%;
-  background-color: #373767;
-  transition: top 1s ease;
-  flex-direction: column;
-  color: white;
-box-sizing: content-box;
-}
-.popup-container {
-  border: 1px solid white;
-}
+  /* popup-menu */
+  .popup-container {
+    height: 85vh;
+    width: 60%;
+    top: 10%;
+    left: 17%;
+    right: 0%;
+    bottom: 10%;
+    position: fixed;
+    z-index: 10;
+    text-align: left;
+    margin-left: 0%;
+    background-color: #373767;
+    transition: top 1s ease;
+    flex-direction: column;
+    color: white;
+    box-sizing: content-box;
+  }
+  .popup-container {
+    border: 1px solid white;
+  }
 
-.popup-close {
-  justify-content: end;
-  align-content: center;
-  padding-top: 0.8em;
-}
-.popup-content {
- display: grid;
- grid-template-columns: 90% 10%;
-}
+  .popup-close {
+    justify-content: end;
+    align-content: center;
+    padding-top: 0.8em;
+  }
+  .popup-content {
+    display: grid;
+    grid-template-columns: 90% 10%;
+  }
 
-.popup-img {
-  text-align: center;
-}
+  .popup-img {
+    text-align: center;
+  }
 
-.popup-img img{
-  max-width: 490px;
-  max-height: 290px;
-}
-.popup-info {
-  text-align: center;
-  justify-content: center;
-}
+  .popup-img img {
+    max-width: 490px;
+    max-height: 290px;
+  }
+  .popup-info {
+    text-align: center;
+    justify-content: center;
+  }
 
-.popup-info p {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 30px;
-  padding: 1em 7em;
-  margin: 0;
-}
+  .popup-info p {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 30px;
+    padding: 1em 7em;
+    margin: 0;
+  }
 
-.tech {
-  display: flex;
-  justify-content: center;
-  border-left: 1px solid white;
-  /* border-right: 1px solid white; */
-  padding: 2.5em 0;
-}
+  .tech {
+    display: flex;
+    justify-content: center;
+    border-left: 1px solid white;
+    /* border-right: 1px solid white; */
+    padding: 2.5em 0;
+  }
 
-.popup-button {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 1em;
-}
+  .popup-button {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 1em;
+  }
 
-.btn, .Btn {
-  color: white;
-  text-decoration: none;
-  font-size: 12px;
-  padding: 12px;
-  border: none;
-  height: 48px;
-  width: 95px;
-  background-color: rgba(75, 69, 158, 1);
-  box-shadow: 0 4px 13px 0 rgba(255, 255, 255, 3);
-  cursor: pointer;
-}
+  .btn,
+  .Btn {
+    color: white;
+    text-decoration: none;
+    font-size: 12px;
+    padding: 12px;
+    border: none;
+    height: 48px;
+    width: 95px;
+    background-color: rgba(75, 69, 158, 1);
+    box-shadow: 0 4px 13px 0 rgba(255, 255, 255, 3);
+    cursor: pointer;
+  }
 
-.btn {
-justify-self: end;
-}
+  .btn {
+    justify-self: end;
+  }
 
   /* cleahidden */
 
