--- a/style.css
+++ b/style.css
@@ -1198,6 +1198,7 @@ body {
   .formResponsive span {
     font-size: medium;
     font-weight: normal;
+    padding-top: .3rem;
   }
 
   .formResponsive .contactForm {
