--- a/style.css
+++ b/style.css
@@ -24,6 +24,8 @@ body {
   display: flex;
   justify-content: center;
   flex-direction: row;
+  background-color: #fff;
+  z-index: 100;
 }
 
 .nav-bar-list {
@@ -35,6 +37,8 @@ body {
   top: 16px;
   margin-top: 24px;
   margin-bottom: 60px;
+  background-color: #fff;
+  z-index: 100;
 }
 
 .nav-bar-list li {
