--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
   margin-top: 24px;
   margin-bottom: 60px;
   background-color: #fff;
-  z-index: 100;
+  /* z-index: 100; */
 }
 
 .nav-bar-list li {
@@ -735,7 +735,7 @@ body {
     height: 100%;
     color: black;
     background-color: white;
-    z-index: 100;
+    /* z-index: 100; */
     transform: translateY(-100%);
     transition: transform 0.2s;
     list-style: none;
