--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
   margin-top: 24px;
   margin-bottom: 60px;
   background-color: #fff;
-  /* z-index: 100; */
+  z-index: 100;
 }
 
 .nav-bar-list li {
