--- a/style.css
+++ b/style.css
@@ -535,7 +535,7 @@ body {
   justify-content: center;
 }
 
-.aboutMe h1 {
+.aboutMe h1, .aboutContact h1 {
   font-style: normal;
   font-weight: bold;
   font-size: 40px;
