--- a/style.css
+++ b/style.css
@@ -833,7 +833,7 @@ body {
   .formResponsive p {
     width: 50%;
     font-weight: 600;
-    font-size: x-large;
+    font-size: medium;
     line-height: 46px;
     padding-left: 135px;
     padding-right: 25px;
