--- a/style.css
+++ b/style.css
@@ -833,7 +833,10 @@ body {
   .formResponsive p {
     width: 50%;
     font-weight: 600;
-    font-size: medium;
+    font-size: large;
+    line-height: 46px;
+    padding-left: 135px;
+    padding-right: 25px;
   }
 }
 
