--- a/style.css
+++ b/style.css
@@ -833,9 +833,9 @@ body {
   .formResponsive p {
     width: 50%;
     font-weight: bold;
-    font-size: large;
+    font-size: x-large;
     line-height: 46px;
-    padding-left: 135px;
+    padding-left: 35px;
     padding-right: 25px;
   }
 }
