--- a/style.css
+++ b/style.css
@@ -736,7 +736,7 @@ body {
     height: 100%;
     color: black;
     background-color: white;
-    z-index: 100;
+    /* z-index: 100; */
     transform: translateY(-100%);
     transition: transform 0.2s;
     list-style: none;
@@ -835,8 +835,8 @@ body {
     font-weight: bold;
     font-size: x-large;
     line-height: 46px;
-    padding-left: 105px;
-    padding-right: 25px;
+    text-align: center;
+    justify-items: center;
   }
 }
 
