--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 
 .nav-bar {
   width: 100%;
-  height: 10vh;
+  height: 7vh;
   top: 0;
   display: flex;
   justify-content: center;
@@ -36,6 +36,7 @@ body {
   height: 40px;
   top: 16px;
   margin-top: 24px;
+  margin-bottom: 2rem;
   background-color: #fff;
   color:black;
   z-index: 1000;
