--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
   top: 0;
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-direction: row;
   background-color: #fff;
   z-index: 1000;
@@ -36,7 +37,7 @@ body {
   height: 40px;
   top: 16px;
   margin-top: 24px;
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
   background-color: #fff;
   color:black;
   z-index: 1000;
