--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
   top: 0;
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-direction: row;
   background-color: #fff;
   z-index: 1000;
